PSoC5_VS_Code2/build/meson-logs/meson-log.txt
Build started at 2024-08-08T14:00:27.535481
Main binary: /Applications/OTX-Maestro/bin/meson
Build Options: --cross-file=/Volumes/Data/VScode/GIT/PSoC5_VS_Code/cross_gcc.build
Python system: Darwin
The Meson build system
Version: 1.5.0
Source dir: /Volumes/Data/VScode/GIT/PSoC5_VS_Code
Build dir: /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build
Build type: cross build
Project name: meson_test
Project version: 0.1
C compiler for the host machine: /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc (gcc 10.3.1 "arm-none-eabi-gcc (GNU Arm Embedded Toolchain 10.3-2021.10) 10.3.1 20210824 (release)")
C linker for the host machine: /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc ld.bfd 10.3-2021
-----------
Detecting archiver via: `/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-ar --version` -> 0
stdout:
GNU ar (GNU Arm Embedded Toolchain 10.3-2021.10) 2.36.1.20210621
Copyright (C) 2021 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
C compiler for the build machine: cc (clang 15.0.0 "Apple clang version 15.0.0 (clang-1500.1.0.2.5)")
C linker for the build machine: cc ld64 1022.1
-----------
Detecting archiver via: `llvm-ar-15 --version` -> [Errno 2] No such file or directory: 'llvm-ar-15'
-----------
Detecting archiver via: `llvm-ar --version` -> [Errno 2] No such file or directory: 'llvm-ar'
-----------
Detecting archiver via: `ar --version` -> 1
stderr:
usage:  ar -d [-TLsv] archive file ...
	ar -m [-TLsv] archive file ...
	ar -m [-abiTLsv] position archive file ...
	ar -p [-TLsv] archive [file ...]
	ar -q [-cTLsv] archive file ...
	ar -r [-cuTLsv] archive file ...
	ar -r [-abciuTLsv] position archive file ...
	ar -t [-TLsv] archive [file ...]
	ar -x [-ouTLsv] archive [file ...]
-----------
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: arm
Host machine cpu: cortex-m4
Target machine cpu family: arm
Target machine cpu: cortex-m4
Program /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-objcopy found: YES (/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-objcopy)
Program /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-objdump found: YES (/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-objdump)
Program /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-size found: YES (/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-size)
Program /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gdb found: YES (/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gdb)
Program /Applications/OTX-Maestro/bin/cymcuelftool found: YES (/Applications/OTX-Maestro/bin/cymcuelftool)
Program /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-readelf found: YES (/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-readelf)
Program /Applications/OTX-Maestro/bin/memcalc found: YES (/Applications/OTX-Maestro/bin/memcalc)
Program /Applications/OTX-Maestro/bin/cyelftool found: YES (/Applications/OTX-Maestro/bin/cyelftool)
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpexm8_c3h/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpexm8_c3h/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) {
            void * something;
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmp2gl7x_hx/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmp2gl7x_hx/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) >= 0)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpuxga3hi9/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpuxga3hi9/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 0)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpwunjx4g1/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpwunjx4g1/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 1)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpz0r0bbli/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpz0r0bbli/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 3)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmp4r3t94q8/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmp4r3t94q8/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) > 7)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmp4r3t94q8/testfile.c: In function 'main':
/Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmp4r3t94q8/testfile.c:3:37: error: size of array 'a' is negative
    3 |         int main(void) { static int a[1-2*!(sizeof(void *) > 7)]; a[0]=0; return 0; }
      |                                     ^

Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpn73ezt7v/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpn73ezt7v/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) <= 5)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  /Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpp_0t1_v6/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpp_0t1_v6/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 

Code:
 
        #include <stddef.h>
        int main(void) { static int a[1-2*!(sizeof(void *) <= 4)]; a[0]=0; return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 
Running compile:
Working directory:  /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpnurn6mtd
Code:

-----------
Command line: `/Applications/OTX-Maestro/gcc-arm/bin/arm-none-eabi-gcc /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpnurn6mtd/testfile.c -o /Volumes/Data/VScode/GIT/PSoC5_VS_Code/build/meson-private/tmpnurn6mtd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 --print-search-dirs` -> 0
stdout:
install: /Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/
programs: =/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/:/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/:/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/bin/arm-none-eabi/10.3.1/:/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/bin/
libraries: =/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/:/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/:/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/lib/arm-none-eabi/10.3.1/:/Applications/OTX-Maestro/gcc-arm/bin/../lib/gcc/arm-none-eabi/10.3.1/../../../../arm-none-eabi/lib/:/Applications/OTX-Maestro/gcc-arm/bin/../arm-none-eabi/lib/arm-none-eabi/10.3.1/:/Applications/OTX-Maestro/gcc-arm/bin/../arm-none-eabi/lib/:/Applications/OTX-Maestro/gcc-arm/bin/../arm-none-eabi/usr/lib/arm-none-eabi/10.3.1/:/Applications/OTX-Maestro/gcc-arm/bin/../arm-none-eabi/usr/lib/
-----------
Library CyComponentLibrary found: YES
Build targets in project: 4

meson_test 0.1

  User defined options
    Cross files: /Volumes/Data/VScode/GIT/PSoC5_VS_Code/cross_gcc.build

Found ninja-1.11.1 at /opt/local/bin/ninja
